fixed dark mode in results page

--- a/frontend/src/pages/MediaPage.module.css
+++ b/frontend/src/pages/MediaPage.module.css
@@ -7,7 +7,7 @@
 
 .mediaPageDark {
     background: #212529;
-    color: white;
+    /* color: white; */
 }
 
 .mediaPageDark * {
